+	- Primitive categories are now sorted alphabetically.
+	- Added hi-res counterparts for various primitive categories.
+	- Added support for direct colors.
+	- Added an action for splitting lines into equal-sized segments.
+	- Added three togglable actions for filtering what's drawn (Draw surfaces/Draw edgelines/Draw conditional lines)
+	- Added the magic wand tool.

-	- The camera is now changed to the top one if switching to draw mode while using the free camera instead of disabling the draw mode.
-	- The color selector now uses the color's edge color for the borders instead of black.
-	- Fixed: LDForge would sometimes crash during startup over uninitialized data in the GL renderer.
-	- Primitive generator: added support for multiple spaces before primitive numbers, add "Hi-Res" to the names of 48/ primitives.
-	- Implicitely-opened documents are now closed automatically when rendered unused, hopefully reducing memory usage somewhat.
-	- Fixed: checking the hi-res option in the primitive generator would not allow segment values over 16.
-	- Fixed: The message log was still written with black text with dark backgrounds.
-	- Fixed: couldn't open larger files because of a type mismatch in moc method calling, leading into runtime problems
-	- When an external program is attempted to be used without a binary path defined the user will be asked with an input dialog for the path. When adding edges while using Intersector (which is done with Isecalc), the user is prompted for Isecalc's path now as well if necessary instead of just ignoring it and not adding the edgelines.
-	- Coordinate rounding now works properly, figures scientific notation and rounds subfile position and matrix. Values are also now properly rounded instead of just floored, 1.2348 now rounds to 1.235 and not 1.234. Subfile matrix values are rounded to 4 decimals, everything else to 3 decimals.
-	- Fixed: Hi-res cones with 3 digit numbers wouldn't go to the "Cones (48)" category properly