@@ -43,6 +43,7 @@
 +	- Added an action for splitting lines into equal-sized segments.
 +	- Added three togglable actions for filtering what's drawn (Draw surfaces/Draw edgelines/Draw conditional lines)
 +	- Added the magic wand tool.
++	- Can now attempt to download missing subfiles from ldraw.org like LDView.
 
 -	- The camera is now changed to the top one if switching to draw mode while using the free camera instead of disabling the draw mode.
 -	- The color selector now uses the color's edge color for the borders instead of black.
